my first commit

--- a/app.html
+++ b/app.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Precious</p>
-    <h1>Body</h1>
-    
+    <h1>Git Demo Page</h1>
 </body>
 </html>
